--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -23,6 +23,14 @@
     "create-local-1338": "graph create --node http://localhost:9020/ connext/nxtp",
     "remove-local-1338": "graph remove --node http://localhost:9020/ connext/nxtp",
     "deploy-local-1338": "graph deploy --node http://localhost:9020/ --ipfs http://localhost:5001 connext/nxtp",
+    "prepare:local-1313161555": "yarn deploy local local auroraTestnet",
+    "create-local-1313161555": "graph create --node http://localhost:8020/ connext/nxtp-aurora-testnet",
+    "remove-local-1313161555": "graph remove --node http://localhost:8020/ connext/nxtp-aurora-testnet",
+    "deploy-local-1313161555": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 connext/nxtp-aurora-testnet",
+    "prepare:local-1666700000": "yarn deploy local local harmonyTest",
+    "create-local-1666700000": "graph create --node http://localhost:8020/ connext/nxtp-harmony-testnet",
+    "remove-local-1666700000": "graph remove --node http://localhost:8020/ connext/nxtp-harmony-testnet",
+    "deploy-local-1666700000": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 connext/nxtp-harmony-testnet",
     "test": "exit 0"
   },
   "files": [
